# spark-tudu

./: README.md  example.py  main.py  spark-tudu.toml  textual_css.tcss
spark-tudu/: LICENSE  README.md  build_entry.py  pyproject.toml
spark-tudu/src/spark_tudu/: __main__.py  app.py  textual_css.tcss
spark-tudu/src/spark_tudu.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
