[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "spark-tudu"
version = "0.1.2"
description = "Python based TUI app for managing TODO and similar messages in your projects."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "emb3rcia" }
]
dependencies = [
    "textual",
    "rich"
]
keywords = ["todo", "tui", "textual", "terminal", "developer-tools"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Environment :: Console",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/emb3rcia/spark-tudu"
Repository = "https://github.com/emb3rcia/spark-tudu"
Issues = "https://github.com/emb3rcia/spark-tudu/issues"

[project.scripts]
spark-tudu = "spark_tudu.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
spark_tudu = ["textual_css.tcss"]